# photon-nugget

./: .env.example  .gitignore  Dockerfile  README.md  REFACTORING.md  check_db.py  docker-compose.yml  download_model.sh  main.py  pyproject.toml  requirements.txt  solar_sage.sh  start_api_server.sh  start_ollama.sh  ui_app.py
agents/: __init__.py  agent_engine.py  orchestrator.py  tool_registry.py
api/: __init__.py  client.py
app/: app.py  chatbot_engine.py  prompt.py  retriever.py  server.py
cli/: main.py
config/: __init__.py  default.py
core/: exceptions.py  logging.py
docs/: DEVELOPERS.md  agent_implementation_guide.md  agentic_quickstart.md  agentic_rag_chatbot.md  agentic_rag_roadmap.md  agentic_vision.md  api_architecture.md  chunking_strategy_pattern.md  dual_agent_architecture.md  giskard_testing_plan.md  implementation_status.md  rag_improvements_plan.md  shell_commands.md  testing_guide.md  ui_architecture.md
evaluation/: eval_questions.csv  evaluate.py  evaluate_retrieval.py  reference_answers.json
frontend/: README.md  package-lock.json  package.json
ingestion/: chunking_strategy.py  cleaner.py  enhanced_pipeline.py  fetcher.py  ingestion_runner.py  parser.py  pipeline.py
llm/: chatbot_engine.py  llm_factory.py  ollama_llm.py  transformer_llm.py
model/: chatbot_engine.py
project_intelligence/: README.md  requirements.txt
prompts/: fallback.prompt  summarization.prompt
rag/: agent_enhanced_rag.py  rag_cli.py  rag_engine.py  runner.py  weather_enhanced_rag.py
retriever/: retriever.py
scripts/: api_server.sh  download_hf.sh  (+9 more)
(+246 files in other folders)
