[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solar-sage"
version = "0.1.0"
description = "Intelligent Solar Energy Assistant"
readme = "README.md"
authors = [
    {name = "Solar Sage Team", email = "info@solarsage.example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=1.8.2",
    "streamlit>=1.12.0",
    "lancedb>=0.1.0",
    "sentence-transformers>=2.2.2",
    "pymupdf>=1.19.0",
    "python-dotenv>=0.19.0",
    "requests>=2.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
    "pytest-cov>=2.12.1",
    "black>=21.8b0",
    "isort>=5.9.3",
    "mypy>=0.910",
    "flake8>=3.9.2",
]

[project.scripts]
solar-sage = "cli.main:main"

[tool.setuptools]
packages = ["agents", "api", "app", "cli", "config", "core", "ingestion", "llm", "models", "rag", "retriever", "tools", "ui"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
